# encuesta-asi-vamos-survey-reporting

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: disaggregations.json
src/: builder.py  database.py  excel.py  extend_tables.py  metadata.py  paths.py  provisional.py  repository.py
src/queries/: provisional.py  questions.py
